appId: com.joshuamdeguzman.circleci_flutter

---

- launchApp

- assertVisible: "Login"

- tapOn: "Email"
- inputText: "test@test.com"

- tapOn: "Password"
- inputText: "password123"

- tapOn: "LOGIN"

- assertVisible: "Home"

- scroll

- tapOn: "Settings"

- assertVisible: "Logout"

- tapOn: "Logout"

- assertVisible: "Login"
