appId: com.joshuamdeguzman.circleci_flutter
---
- launchApp
- assertVisible: "Flutter Demo Home Page"
- assertVisible: "You have pushed the button this many times"
- tapOn:
    id: "increment"
- assertVisible: "1"
